fix highlighting for #ifdef _xxx stuff unit test extended to catch this case

BUG: 397766